# dslinux

./: .clang-format  .gitignore  CMakeLists.txt  HOW_TO_TEST.md  LICENSE  PKGBUILD  PRD.md  README.md  build.sh  dualsense.pc.in  install.sh
bindings/python/: dualsense.py
captures/: audio-probe.txt
cli/: ds-audio-probe.c  ds-haptics-test.c  dsctl.c
daemon/: dsx_protocol.c  dsx_protocol.h  dualsensed.c  dualsensed.service  json_parse.c  json_parse.h  native_protocol.c  native_protocol.h
docs/: HUMAN_TASKS.md  bt-audio-haptics-notes.md  bt-audio-jack-notes.md  bt-mic-duplex-notes.md  missing-features.md
gui/: dualsense-gui.py
include/: dualsense.h
profiles/: README.md  default.json  rdr2.json  spider-man.json
scripts/: setup-bt.sh
src/: crc32.c  crc32.h  dualsense.c  haptics.c  haptics.h  hidraw.c  hidraw.h  input.c  input.h  triggers.c  triggers.h
test/: test_crc32.c  test_report_dump.c  test_triggers.c
udev/: 99-dualsense.rules
